--- a/gb/23/8/10/n14051604.md
+++ b/gb/23/8/10/n14051604.md
@@ -1,56 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>歌仔戏人才培育结业登台为祖师爷祝寿</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14051607-629156-600x400.jpg" />
 <h6>兰阳戏剧团培育歌仔戏人才，结业登台为祖师爷祝寿。（宜兰文化局提供）
 </h6>
 <hr>
-<p>【大纪元2023年08月10日讯】（大纪元记者谢月琴台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%9C%E5%85%B0.md#1">宜兰</a>报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B0%E9%98%B3%E6%88%8F%E5%89%A7%E5%9B%A2.md#1">兰阳戏剧团</a>2023年【歌仔未来?青春登台】戏曲人才培育推广计划，经过近两周的密集培训，在8月10日下午于国立<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">传统艺术中心</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%9C%E5%85%B0.md#1">宜兰</a>传艺园区举行成果展演，今天恰逢戏曲<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%96%E5%B8%88%E7%88%B7.md#1">祖师爷</a>“西秦王爷”诞辰，由这群<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%8C%E4%BB%94%E6%88%8F.md#1">歌仔戏</a>新秀学员们于文昌祠戏台轮番上阵，除了展现学习成果以外，亦向<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%96%E5%B8%88%E7%88%B7.md#1">祖师爷</a>表达贺寿之意，意义非凡。</p>
-<figure id="attachment_14051606" aria-describedby="caption-attachment-14051606" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14051606-629155.jpg"><img class="size-large wp-image-14051606" src="https://i.epochtimes.com/assets/uploads/2023/08/id14051606-629155-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14051606" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B0%E9%98%B3%E6%88%8F%E5%89%A7%E5%9B%A2.md#1">兰阳戏剧团</a>培育<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AD%8C%E4%BB%94%E6%88%8F.md#1">歌仔戏</a>人才，结业登台为祖师爷祝寿。（宜兰文化局提供）</figcaption></figure>
+<p>【大纪元2023年08月10日讯】（大纪元记者谢月琴台湾宜兰报导）兰阳戏剧团2023年【歌仔未来?青春登台】戏曲人才培育推广计划，经过近两周的密集培训，在8月10日下午于国立传统艺术中心宜兰传艺园区举行成果展演，今天恰逢戏曲祖师爷“西秦王爷”诞辰，由这群歌仔戏新秀学员们于文昌祠戏台轮番上阵，除了展现学习成果以外，亦向祖师爷表达贺寿之意，意义非凡。</p>
+<figure id="attachment_14051606" aria-describedby="caption-attachment-14051606" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14051606-629155.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14051606" src="https://i.epochtimes.com/assets/uploads/2023/08/id14051606-629155-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14051606" class="wp-caption-text">兰阳戏剧团培育歌仔戏人才，结业登台为祖师爷祝寿。（宜兰文化局提供）</figcaption></figure>
 <p>兰阳戏剧团戏曲人才培育计划自2015年起，今年已迈入第八届，每年皆吸引来自不同年龄、地区之歌仔戏爱好者前来报名参加，今年特别邀请“全联善美的文化艺术基金会”共同协办，首次将成果展演带入宜兰传艺园区进行。</p>
 <p>本届共招收28名学员，经过近两周的基本功及唱腔、身段训练，共培训5出经典折子戏进行成果汇演，包含《山伯英台》、《樊江关》、《天地情》等耳熟能详的剧目，允文允武、唱念兼备。</p>
-<figure id="attachment_14051605" aria-describedby="caption-attachment-14051605" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14051605-629154.jpg"><img class="size-large wp-image-14051605" src="https://i.epochtimes.com/assets/uploads/2023/08/id14051605-629154-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14051605" class="wp-caption-text">兰阳戏剧团培育歌仔戏人才，结业登台为祖师爷祝寿。（宜兰文化局提供）</figcaption></figure>
+<figure id="attachment_14051605" aria-describedby="caption-attachment-14051605" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14051605-629154.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14051605" src="https://i.epochtimes.com/assets/uploads/2023/08/id14051605-629154-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14051605" class="wp-caption-text">兰阳戏剧团培育歌仔戏人才，结业登台为祖师爷祝寿。（宜兰文化局提供）</figcaption></figure>
 <p>今年参与的28名学员中，饰演祝英台的陈诗旋已是第六次参加，诗旋在就读同乐国小期间就参加由兰阳戏剧团师资指导的歌仔戏社团，现在是国立台湾戏曲学院歌仔戏科即将升高三的学生。她表示，来参加兰阳戏剧团的培育计划，不仅可以练功、学戏，还有实际登台表演的机会，很能充实自己的暑假，这次饰演祝英台，从学习唱腔到揣摩戏中角色情绪对她而言都有新的突破。</p>
 <p>从高雄远道而来的学员童素芬表示，好几年前就听说过兰阳戏剧团的培育计划，很想来却一直没有机会参加，今年终于排除万难来参与，她觉得在这里有非常好的学习资源，也能够学到平常没有机会接触到的扎实基本功，有种圆梦的感觉，非常值得。</p>
 <p>歌仔戏发源于宜兰，兰阳戏剧团【歌仔未来?青春登台】戏曲人才培育推广计划八年来提供了歌仔戏爱好者一个良好的学习平台与资源，无论科班生或业余学习者皆能有所收获，培育成果为在地文化的传承与推广写下了亮眼的佳绩，本届培育计划在今天的新秀祝寿汇演下圆满结束，期待这项具有代表性的台湾传统文化在大家的努力下，能够开枝散叶、传唱不息。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/14/n13824862.md#1">倾听黄春明的歌仔美学 《杜子春》彩排抢先看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/22/n13830326.md#1">兰阳戏剧团30周年团庆暨《杜子春》彩排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/24/n13831963.md#1">宜兰艺文祭 9/24、25化龙一村登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/27/n13853895.md#1">“宜兰县无形文化资产暨保存技术保存者”授证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962036.md#1">“中国文化尽在神韵” 台北国馆再爆满</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095693.md#1">侯友宜到基隆造势 承诺盖好基隆捷运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095683.md#1">全台终身学习楷模 基隆纪易延获特优殊荣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095724.md#1">总统参选人对基隆四接表态 柯文哲率先回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095671.md#1">望见东兴宜兰县客底文化发展试办计划成果展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095619.md#1">宜兰国际潮流文化艺术祭 中兴文创园区登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/14/n13824862.md#1">倾听黄春明的歌仔美学 《杜子春》彩排抢先看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/22/n13830326.md#1">兰阳戏剧团30周年团庆暨《杜子春》彩排</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/24/n13831963.md#1">宜兰艺文祭 9/24、25化龙一村登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/27/n13853895.md#1">“宜兰县无形文化资产暨保存技术保存者”授证</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/30/n13962036.md#1">“中国文化尽在神韵” 台北国馆再爆满</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309821.md#1">复振海洋文化的梦想地　向阳薪传木工坊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309682.md#1">基隆关举办廉政法纪讲习 深化关员法纪素养</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283721.md#1">花莲美式猎人学校体验 让教育更多元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309625.md#1">基隆议会开临时会 议长童子玮盼府会多沟通</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309330.md#1">雾鹿布农歌声 在大安森林公园开唱</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089724.md#1">新婚夫君不入洞房 丑妻子怎样让他另眼相看？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090206.md#1">当小和尚遇到红卫兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092772.md#1">“天变”不是偶然的 有历史事验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091556.md#1">【未解之谜】宇宙只是幻象？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14092136.md#1">【历史的瞬间】林语堂 信仰和传统的启蒙与回归</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/14/n14095329.md#1">【时事金扫描】老爸救女大战哈马斯 以军救人质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/14/n14095387.md#1">【马克时空】以色列将攻入加沙 真主党威胁参战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094546.md#1">【中国禁闻】传京东刘强东违法被抓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094588.md#1">以色列驻华使馆职员在京遭袭 美大使回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094238.md#1">习近平赴长江视察 丁薛祥未兼一要职引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14093515.md#1">中国房企低价求售为何不见效 专家解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094507.md#1">买下老翁宅 布莱德彼特让对方免费住到105岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094893.md#1">靳东又翻车 大学发言被吐槽“不懂装懂”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094927.md#1">唐嫣片场受伤紧急送医 拄拐杖行走画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/14/n14095250.md#1">58届广播金钟奖揭晓 教育电台风光拿5奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094740.md#1">73岁翁倩玉公开保养秘诀 长年陶醉于版画创作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086569.md#1">缺镁会肥胖、患糖尿病 这些早餐食物可补镁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094460.md#1">牛仔裤应该多久洗一次？ Levi’s老板这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/5/n14088334.md#1">姜黄吃多伤肝怎么办？这一物祛肝火 可代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14092392.md#1">润肺止咳 柿饼功效远胜柿子 1种吃法最养生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092568.md#1">小火烤15分钟 叉烧肉软嫩又多汁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/10/n14051604.htm">歌仔戏人才培育结业登台为祖师爷祝寿</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051604.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/10/n14051604.htm">歌仔戏人才培育结业登台为祖师爷祝寿</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/10/n14051604.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
